--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>My First Ever Website</h1>
     <p>Now i try to push my second message.</p>
+    <input type="text">
+    <button>click button</button>
 </body>
 </html>
