--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
     <h1>My First Ever Website</h1>
     <p>Now i try to push my second message.</p>
-    <input type="text">
-    <button>click button</button>
+    <p>i already published my new website.</p>
 </body>
 </html>
